# backloggd-discord-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: docker_image.yml
migrations/: initial-tables.sql
src/: database.rs  main.rs  users.txt
src/domain/: rating.rs
