[package]
name = "backloggd-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.16.0"
async-std = { version = "1", features = [ "attributes" ] }
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio-cron-scheduler = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
cron = "0.12.0"
markup = "0.13.1"
html-escape = "0.2.13"