[package]
name = "backloggd-discord-bot"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.3", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.19.0"
async-std = { version = "1", features = [ "attributes" ] }
dotenv = "0.15.0"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio-cron-scheduler = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
cron = "0.12.0"
markup = "0.15.0"
html-escape = "0.2.13"
async-trait = "0.1.51"